--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,6 @@
             </intent-filter>
         </activity>
         <activity android:name=".Registration"/>
-
+        <activity android:name=".Dashboard"/>
     </application>
 </manifest>
